--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
@@ -17,8 +17,7 @@
   "autoload": {
     "files": [
       "src/functions.php",
-      "src/Reduced.php",
-      "src/LazyTransformer.php"
+      "src/Reduced.php"
     ]
   }
 }
